fix menu and scrollbar

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,13 +3,13 @@
 .header {
   position: sticky;
   top: 0;
-  z-index: 100;
-  height: 64px;
+  z-index: 1100;
+  height: var(--header-height);
   background-color: $colors-white;
   border-bottom: 1px solid $colors-elements;
 
   @include onTablet {
-    height: 48px;
+    height: var(--header-height);
   }
 
   &__container {
