--- a/src/components/Header/MobileMenu/MobileMenu.module.scss
+++ b/src/components/Header/MobileMenu/MobileMenu.module.scss
@@ -2,7 +2,7 @@
 
 .mobileMenu {
   position: fixed;
-  inset: 0;
+  inset: var(--header-height) 0 0;
   z-index: 1000;
   background: $colors-white;
   display: flex;
@@ -13,7 +13,7 @@
     flex-direction: column;
     align-items: center;
     gap: 32px;
-    margin-top: 72px;
+    margin-top: 24px;
   }
 
   &__bottom {
