--- a/src/components/ProductsCarousel/ProductsCarousel.module.scss
+++ b/src/components/ProductsCarousel/ProductsCarousel.module.scss
@@ -28,12 +28,7 @@
     display: flex;
     overflow: auto hidden;
     gap: 16px;
-    scrollbar-width: none;
     scroll-snap-type: x mandatory;
-  }
-
-  &__track::-webkit-scrollbar {
-    display: none;
   }
 
   &__item {
